[package]
name = "linux_proc"
description = "A library to help reading the contents of `/proc` on linux"
readme = "README.md"
version = "0.1.1"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]
repository = "https://github.com/derekdreery/linux_proc"
keywords = ["linux", "proc", "system", "info", "top"]
categories = ["command-line-interface", "filesystem", "os::unix-apis", "parser-implementations"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "derekdreery/linux_proc" }

[dev-dependencies]
quicli = "0.3"
